Update krita to compile against Vc >= 1.0.0
This updates krita to work with Vc version 1.0.0 and above. Some changes to the
build system were needed as the compile options are now set differently. The
compile flags are set on the lib which uses the functionality. This is needed in
a non packager build only. Compile the KisCompositionBenchmark against the
current available Vc optimization.

Thanks to Vir for all his help.

Tested packager and non packager build. Run the and compared the output of
./KisCompositionBenchmark.shell. The speed is nearly the same. For avx a
different code path is used when avx2 is not available which makes it tick
slower but correct in all cases according to Vir.

Compiled and tested against vc 1.0.0 and vc 1.2.0.

(cherry picked from commit b68c1c7666510e268babc4cd87cd9d5ad34ff2d5)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -587,7 +587,7 @@ endif()
 
 set(OLD_CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} )
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules )
-macro_optional_find_package(Vc 0.6.70)
+macro_optional_find_package(Vc 1.0.0)
 set_package_properties(Vc PROPERTIES
     DESCRIPTION "Portable, zero-overhead SIMD library for C++"
     URL "https://github.com/VcDevel/Vc"
@@ -625,48 +625,28 @@ if(HAVE_VC)
     endif()
 
     #Handle Vc master
-    if(Vc_VERSION_MAJOR GREATER 0 OR Vc_VERSION_MINOR GREATER 7)
-        message(STATUS "Vc version is greater than 0.7, enabling AVX2 support")
-
-        if(Vc_COMPILER_IS_GCC OR Vc_COMPILER_IS_CLANG)
-            AddCompilerFlag("-std=c++11" _ok)
-            if(NOT _ok)
-                AddCompilerFlag("-std=c++0x" _ok)
-            endif()
+    if(Vc_COMPILER_IS_GCC OR Vc_COMPILER_IS_CLANG)
+        AddCompilerFlag("-std=c++11" _ok)
+        if(NOT _ok)
+            AddCompilerFlag("-std=c++0x" _ok)
         endif()
-
-        macro(ko_compile_for_all_implementations_no_scalar _objs _src)
-        if(PACKAGERS_BUILD)
-            vc_compile_for_all_implementations(${_objs} ${_src} FLAGS ${ADDITIONAL_VC_FLAGS} -fPIC ONLY SSE2 SSSE3 SSE4_1 AVX AVX2)
-        else()
-            set(${_objs} ${_src})
-        endif()
-        endmacro()
-
-        macro(ko_compile_for_all_implementations _objs _src)
-        if(PACKAGERS_BUILD)
-            vc_compile_for_all_implementations(${_objs} ${_src} FLAGS ${ADDITIONAL_VC_FLAGS} ONLY Scalar SSE2 SSSE3 SSE4_1 AVX AVX2)
-        else()
-            set(${_objs} ${_src})
-        endif()
-        endmacro()
-    else()
-        macro(ko_compile_for_all_implementations_no_scalar _objs _src)
-        if(PACKAGERS_BUILD)
-            vc_compile_for_all_implementations(${_objs} ${_src} FLAGS ${ADDITIONAL_VC_FLAGS} ONLY SSE2 SSSE3 SSE4_1 AVX)
-        else()
-            set(${_objs} ${_src})
-        endif()
-        endmacro()
-
-        macro(ko_compile_for_all_implementations _objs _src)
-        if(PACKAGERS_BUILD)
-            vc_compile_for_all_implementations(${_objs} ${_src} FLAGS ${ADDITIONAL_VC_FLAGS} ONLY Scalar SSE2 SSSE3 SSE4_1 AVX)
-        else()
-            set(${_objs} ${_src})
-        endif()
-        endmacro()
     endif()
+
+    macro(ko_compile_for_all_implementations_no_scalar _objs _src)
+    if(PACKAGERS_BUILD)
+        vc_compile_for_all_implementations(${_objs} ${_src} FLAGS ${ADDITIONAL_VC_FLAGS} ONLY SSE2 SSSE3 SSE4_1 AVX AVX2+FMA+BMI2)
+    else()
+        set(${_objs} ${_src})
+    endif()
+    endmacro()
+
+    macro(ko_compile_for_all_implementations _objs _src)
+    if(PACKAGERS_BUILD)
+        vc_compile_for_all_implementations(${_objs} ${_src} FLAGS ${ADDITIONAL_VC_FLAGS} ONLY Scalar SSE2 SSSE3 SSE4_1 AVX AVX2+FMA+BMI2)
+    else()
+        set(${_objs} ${_src})
+    endif()
+    endmacro()
 
     if (NOT PACKAGERS_BUILD)
       # Optimize the whole Calligra for current architecture
