Note support for multiple urls in apps' desktop files

--- a/karbon/data/karbon.desktop
+++ b/karbon/data/karbon.desktop
@@ -36,7 +36,7 @@ Name[tr]=Karbon
 Name[ug]=Karbon
 Name[uk]=Karbon
 Name[x-test]=xxKarbonxx
-Exec=karbon %u
+Exec=karbon %U
 GenericName=Scalable Graphics
 GenericName[af]=Skaal veranderbare Grafieka
 GenericName[bg]=Векторна графика
