--- a/sheets/sheets.desktop
+++ b/sheets/sheets.desktop
@@ -31,7 +31,7 @@ Name[tr]=Calligra Sheets
 Name[ug]=Calligra ۋاراقلار
 Name[uk]=Calligra Sheets
 Name[x-test]=xxCalligra Sheetsxx
-Exec=calligrasheets %u
+Exec=calligrasheets %U
 GenericName=Spreadsheet
 GenericName[bg]=Електронни таблици
 GenericName[bs]=Tablica
