--- a/stage/app/stage.desktop
+++ b/stage/app/stage.desktop
@@ -37,7 +37,7 @@ Name[uk]=Calligra Stage
 Name[x-test]=xxCalligra Stagexx
 Name[zh_CN]=Calligra Stage
 Name[zh_TW]=Calligra Stage
-Exec=calligrastage %u
+Exec=calligrastage %U
 GenericName=Presentation
 GenericName[bg]=Екранни презентации
 GenericName[bs]=Prezentacija
