--- a/words/app/words.desktop
+++ b/words/app/words.desktop
@@ -39,7 +39,7 @@ Name[uk]=Calligra Words
 Name[x-test]=xxCalligra Wordsxx
 Name[zh_CN]=Calligra Words
 Name[zh_TW]=Calligra Words
-Exec=calligrawords %u
+Exec=calligrawords %U
 GenericName=Word Processor
 GenericName[bg]=Текстообработваща програма
 GenericName[bs]=Obrađivač teksta
