--- a/words/part/author/author.desktop
+++ b/words/part/author/author.desktop
@@ -34,7 +34,7 @@ Name[tr]=Calligra Yazar
 Name[ug]=كاللىگىرا ئاپتورى
 Name[uk]=Calligra Author
 Name[x-test]=xxCalligra Authorxx
-Exec=calligraauthor %u
+Exec=calligraauthor %U
 GenericName=Author tool
 GenericName[bs]=Autorski alat
 GenericName[ca]=Eina d'autor
