--- a/filters/sheets/excel/sidewinder/CMakeLists.txt
+++ b/filters/sheets/excel/sidewinder/CMakeLists.txt
@@ -44,4 +44,4 @@ add_definitions(-DSWINDER_XLS2RAW)
 
 add_executable(sidewinder ${sidewinder_SRCS})
 
-target_link_libraries(sidewinder mso calligrasheetsodf Qt5::Core Qt5::Gui ${ZLIB_LIBRARIES} koodf)
+target_link_libraries(sidewinder mso calligrasheetsodf Qt5::Core Qt5::Gui koodf)
