Remove include_directories of non-existing dirs

--- a/filters/karbon/xaml/CMakeLists.txt
+++ b/filters/karbon/xaml/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 
-include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/core ${CMAKE_SOURCE_DIR}/karbon/visitors   )
+include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/visitors   )
 
 
 ########### next target ###############
