--- a/karbon/plugins/roundcorners/CMakeLists.txt
+++ b/karbon/plugins/roundcorners/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 
-include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/core   )
+include_directories( ${CMAKE_SOURCE_DIR}/karbon )
 
 
 ########### next target ###############
