--- a/filters/karbon/svg/CMakeLists.txt
+++ b/filters/karbon/svg/CMakeLists.txt
@@ -1,7 +1,5 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/karbon
-                     ${CMAKE_SOURCE_DIR}/karbon/core
-                      )
+include_directories( ${CMAKE_SOURCE_DIR}/karbon )
 
 
 if(SHOULD_BUILD_FILTER_KARBON_TO_SVG)
