--- a/karbon/plugins/flattenpath/CMakeLists.txt
+++ b/karbon/plugins/flattenpath/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/core   )
+include_directories( ${CMAKE_SOURCE_DIR}/karbon )
 
 
 ########### next target ###############
