--- a/karbon/plugins/refinepath/CMakeLists.txt
+++ b/karbon/plugins/refinepath/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/core   )
+include_directories( ${CMAKE_SOURCE_DIR}/karbon )
 
 set(karbon_refinepath_PART_SRCS RefinePathPlugin.cpp KarbonPathRefineCommand.cpp )
 
