Enable -DQT_NO_CAST_TO_ASCII, the code compiles with it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -332,6 +332,7 @@ add_definitions(
   -DQT_USE_FAST_OPERATOR_PLUS
   -DQT_USE_FAST_CONCATENATION
   -DQT_NO_URL_CAST_FROM_STRING
+  -DQT_NO_CAST_TO_ASCII
 )
 
 # only with this definition will all the FOO_TEST_EXPORT macro do something
