--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"calligrafilters\")
 
+# TEMPORARY: for  Qt5/KF5 build porting phase deprecation warnings are only annoying noise
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUC)
+    add_definitions(-Wno-deprecated -Wno-deprecated-declarations)
+endif ()
+
 kde_enable_exceptions()
 
 if(SHOULD_BUILD_LIB_KOODF2)
