--- a/filters/sheets/CMakeLists.txt
+++ b/filters/sheets/CMakeLists.txt
@@ -1,3 +1,8 @@
+# TEMPORARY: for  Qt5/KF5 build porting phase deprecation warnings are only annoying noise
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUC)
+    add_definitions(-Wno-deprecated -Wno-deprecated-declarations)
+endif ()
+
 if(SHOULD_BUILD_FILTER_APPLIXSPREAD_TO_KSPREAD)
     add_subdirectory( applixspread )
 endif()
