Add calligra namespace to data install dirs of plugins

--- a/plugins/formulashape/fonts/CMakeLists.txt
+++ b/plugins/formulashape/fonts/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-install( FILES  cmex10.ttf Arev.ttf ArevIt.ttf ArevBd.ttf ArevBI.ttf  DESTINATION ${DATA_INSTALL_DIR}/formulashape/fonts )
+install( FILES  cmex10.ttf Arev.ttf ArevIt.ttf ArevBd.ttf ArevBI.ttf  DESTINATION ${DATA_INSTALL_DIR}/calligra_shape_formula/fonts )
