--- a/plugins/formulashape/templates/CMakeLists.txt
+++ b/plugins/formulashape/templates/CMakeLists.txt
@@ -1,1 +1,1 @@
-install( FILES  DESTINATION ${DATA_INSTALL_DIR}/formulashape/templates )
+install( FILES  DESTINATION ${DATA_INSTALL_DIR}/calligra_shape_formula/templates )
