--- a/plugins/musicshape/fonts/CMakeLists.txt
+++ b/plugins/musicshape/fonts/CMakeLists.txt
@@ -1,1 +1,1 @@
-install( FILES Emmentaler-14.ttf  DESTINATION ${DATA_INSTALL_DIR}/musicshape/fonts)
+install( FILES Emmentaler-14.ttf  DESTINATION ${DATA_INSTALL_DIR}/calligra_shape_music/fonts)
