Consistently use "calligrawords" as id on the system
* rename share/words -> share/calligrawords
* rename wordsrc -> calligrawordsrc
* rename words.rc -> calligrawords.rc
* rename words.appdata.xml -> org.kde.calligrawords.appdata.xml
* rename translation catalog words.po -> calligrawords.po

CCMAIL:kde-i18n-doc@kde.org

--- a/filters/words/ascii/CMakeLists.txt
+++ b/filters/words/ascii/CMakeLists.txt
@@ -38,6 +38,6 @@ install(TARGETS calligra_filter_odt2ascii DESTINATION ${PLUGIN_INSTALL_DIR}/call
 
 kcoreaddons_desktop_to_json(calligra_filter_odt2ascii calligra_filter_odt2ascii.desktop)
 
-install( PROGRAMS  calligrawords_ascii.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+install( PROGRAMS  org.kde.calligrawords_ascii.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
 
 endif()
