--- a/words/app/CMakeLists.txt
+++ b/words/app/CMakeLists.txt
@@ -14,7 +14,7 @@ kf5_add_kdeinit_executable( calligrawords ${words_KDEINIT_SRCS})
 
 if (APPLE)
    set_target_properties(calligrawords PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.template)
-   set_target_properties(calligrawords PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER "org.calligra.words")
+   set_target_properties(calligrawords PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER "org.kde.calligrawords")
    set_target_properties(calligrawords PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Words")
    install( FILES ${CMAKE_CURRENT_BINARY_DIR}/words_KDEINIT_SRCS.icns DESTINATION ${BUNDLE_INSTALL_DIR}/calligrawords.app/Contents/Resources)
 endif ()
@@ -26,5 +26,5 @@ install(TARGETS kdeinit_calligrawords  ${INSTALL_TARGETS_DEFAULT_ARGS})
 target_link_libraries( calligrawords kdeinit_calligrawords )
 install(TARGETS calligrawords  ${INSTALL_TARGETS_DEFAULT_ARGS})
 
-install( PROGRAMS words.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
-install( FILES words.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
+install( PROGRAMS org.kde.calligrawords.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+install( FILES org.kde.calligrawords.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
