--- a/words/part/author/author_readonly.rc
+++ b/words/part/author/author_readonly.rc
@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="Author" version="4" translationDomain="words">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="Author" version="4" translationDomain="calligrawords">
 <MenuBar>
  <Menu name="file"><text>&amp;File</text>
   <Action name="file_statistics"/>
