--- a/words/plugins/scripting/CMakeLists.txt
+++ b/words/plugins/scripting/CMakeLists.txt
@@ -25,4 +25,4 @@ qt5_wrap_cpp(krossmodulewords_PART_SRCS
 add_library(krossmodulewords MODULE ${krossmodulewords_PART_SRCS})
 target_link_libraries(krossmodulewords kokross wordsprivate)
 install(TARGETS krossmodulewords DESTINATION ${PLUGIN_INSTALL_DIR}/calligrawords/extensions)
-install(FILES scripting.rc DESTINATION ${DATA_INSTALL_DIR}/words/kpartplugins)
+install(FILES scripting.rc DESTINATION ${DATA_INSTALL_DIR}/calligrawords/kpartplugins)
