--- a/words/styles/CMakeLists.txt
+++ b/words/styles/CMakeLists.txt
@@ -1,3 +1,3 @@
 install( FILES
          defaultstyles.xml
-         DESTINATION ${DATA_INSTALL_DIR}/words/styles)
+         DESTINATION ${DATA_INSTALL_DIR}/calligrawords/styles)
