--- a/words/templates/Wordprocessing/CMakeLists.txt
+++ b/words/templates/Wordprocessing/CMakeLists.txt
@@ -1,7 +1,7 @@
 
-install( FILES  A4.odt ProfessionalLetter.odt ProfessionalA4.odt FaxA4.odt FaxLetter.odt      ColorfulA4.odt ColorfulLetter.odt   DESTINATION ${DATA_INSTALL_DIR}/words/templates/Normal/.source)
-install( FILES  a4.png professional.png fax.png colorful.png   DESTINATION ${DATA_INSTALL_DIR}/words/templates/Normal/.thumbnail)
-install( FILES  .directory A4.desktop  ProfessionalLetter.desktop ProfessionalA4.desktop      FaxA4.desktop FaxLetter.desktop      ColorfulA4.desktop ColorfulLetter.desktop  DESTINATION ${DATA_INSTALL_DIR}/words/templates/Normal)
+install( FILES  A4.odt ProfessionalLetter.odt ProfessionalA4.odt FaxA4.odt FaxLetter.odt      ColorfulA4.odt ColorfulLetter.odt   DESTINATION ${DATA_INSTALL_DIR}/calligrawords/templates/Normal/.source)
+install( FILES  a4.png professional.png fax.png colorful.png   DESTINATION ${DATA_INSTALL_DIR}/calligrawords/templates/Normal/.thumbnail)
+install( FILES  .directory A4.desktop  ProfessionalLetter.desktop ProfessionalA4.desktop      FaxA4.desktop FaxLetter.desktop      ColorfulA4.desktop ColorfulLetter.desktop  DESTINATION ${DATA_INSTALL_DIR}/calligrawords/templates/Normal)
 
 ecm_install_icons( ICONS
     48-actions-template_a4.png
@@ -18,7 +18,7 @@ ecm_install_icons( ICONS
 
     48-actions-template_plaintext.png
 
-    DESTINATION ${DATA_INSTALL_DIR}/words/icons
+    DESTINATION ${DATA_INSTALL_DIR}/calligrawords/icons
     THEME hicolor
 )
 
