Consistently use "calligrastage" as id on the system
* rename share/stage -> share/calligrastage
* rename stagerc -> calligrastagerc
* rename stage.rc -> calligrastage.rc
* rename stage.appdata.xml -> org.kde.calligrastage.appdata.xml
* rename translation catalog stage.po -> calligrastage.po

CCMAIL:kde-i18n-doc@kde.org

--- a/stage/CMakeLists.txt
+++ b/stage/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(calligra-stage)
 
-add_definitions(-DTRANSLATION_DOMAIN=\"stage\")
+add_definitions(-DTRANSLATION_DOMAIN=\"calligrastage\")
 
 include_directories(
     ${KOTEXT_INCLUDES}
