--- a/stage/app/CMakeLists.txt
+++ b/stage/app/CMakeLists.txt
@@ -16,7 +16,7 @@ kf5_add_kdeinit_executable(calligrastage ${stage_KDEINIT_SRCS})
 
 if (APPLE)
    set_target_properties(calligrastage PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.template)
-   set_target_properties(calligrastage PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER "org.calligra.stage")
+   set_target_properties(calligrastage PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER "org.kde.calligrastage")
    set_target_properties(calligrastage PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Calligra Stage 2")
    install( FILES ${CMAKE_CURRENT_BINARY_DIR}/stage_KDEINIT_SRCS.icns DESTINATION ${BUNDLE_INSTALL_DIR}/calligrastage.app/Contents/Resources)
 endif ()
@@ -28,5 +28,5 @@ install(TARGETS kdeinit_calligrastage ${INSTALL_TARGETS_DEFAULT_ARGS})
 target_link_libraries(calligrastage kdeinit_calligrastage)
 install(TARGETS calligrastage ${INSTALL_TARGETS_DEFAULT_ARGS})
 
-install( PROGRAMS stage.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-install( FILES stage.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
+install( PROGRAMS org.kde.calligrastage.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
+install( FILES org.kde.calligrastage.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
