--- a/stage/app/org.kde.calligrastage.desktop
+++ b/stage/app/org.kde.calligrastage.desktop
@@ -132,7 +132,7 @@ Icon=calligrastage
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.presentation
 X-Calligra-DefaultMimeTypes=application/vnd.oasis.opendocument.presentation,application/vnd.oasis.opendocument.presentation-template,application/x-kpresenter,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.openxmlformats-officedocument.presentationml.template
 X-DBUS-StartupType=multi
-X-DBUS-ServiceName=org.calligra.stage
+X-DBUS-ServiceName=org.kde.calligrastage
 X-DocPath=stage/index.html
 X-KDE-StartupNotify=true
 Categories=Qt;KDE;Office;
