--- a/stage/pics/animations/CMakeLists.txt
+++ b/stage/pics/animations/CMakeLists.txt
@@ -32,6 +32,6 @@ ecm_install_icons( ICONS
     64-actions-vertical_animations.png
     64-actions-zoom_animation.png
 
-    DESTINATION ${DATA_INSTALL_DIR}/stage/icons
+    DESTINATION ${DATA_INSTALL_DIR}/calligrastage/icons
     THEME hicolor
 )
