--- a/stage/templates/common_icon/CMakeLists.txt
+++ b/stage/templates/common_icon/CMakeLists.txt
@@ -2,6 +2,6 @@ ecm_install_icons( ICONS
     48-actions-template_emptylandscape.png
     sc-actions-template_emptylandscape.svgz
 
-    DESTINATION ${DATA_INSTALL_DIR}/stage/icons
+    DESTINATION ${DATA_INSTALL_DIR}/calligrastage/icons
     THEME hicolor
 )
