--- a/stage/part/calligrastage.rc
+++ b/stage/part/calligrastage.rc
@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 
-<kpartgui name="stage" version="124" translationDomain="stage">
+<kpartgui name="stage" version="124" translationDomain="calligrastage">
     <MenuBar>
         <Menu name="file">
             <Action name="file_export_html" />
