--- a/stage/styles/CMakeLists.txt
+++ b/stage/styles/CMakeLists.txt
@@ -1,3 +1,3 @@
 install( FILES
          defaultstyles.xml
-         DESTINATION ${DATA_INSTALL_DIR}/stage/styles)
+         DESTINATION ${DATA_INSTALL_DIR}/calligrastage/styles)
